# taxvamb_paper_benchmarks

./: .Makefile.swp  .gitignore  Makefile  README.md  TODO.md  TODO_apr12.md  WhatIsWrong.md  db_snakefile.smk  fixed_classifiers_snakefile.smk  help  log2  pyproject.toml  rule  snakefile.smk  snakeout.sh  strainmad  tmp.file  which_databases.md
config/: config.yaml
data_configs/: .esrum_airways_bamfile_contigs.tsv.swp  BIODATA.py  LR.py  air_all_files_esrum_airways_bamfile_contigs.py  airways_bamfile_contigs.tsv  all_files_esrum_airways_bamfile_contigs.py  bam_assembly.tsv  db_esrum_airways_bamfile_contigs.tsv  esrum_airways_bamfile_contigs.tsv  reads.tsv  reads_and_assembly_dir.tsv  some_esrum_airways_bamfile_contigs.tsv  spades_file.tsv
envs/: centrifuge.yaml  checkm2.yaml  comebin.yaml  gunc.yaml  kraken2.yaml  meta_decoder.yaml  metabuli.yaml  mmseqs.yaml  mmseqs2.yaml  semibin.yaml  vamb.yaml
files_used_in_snakemake_workflow/: create_fasta.py
snakemake_modules/: comebin.smk  fixed_extra_taxonomy_classifiers.smk  gunc.smk  metabat.smk  metadecoder.smk  semibin.smk  taxonomy_classifiers.smk  vamb_default.smk
src/workflow_PlasMAAG/: __main__.py
src/workflow_PlasMAAG.egg-info/: entry_points.txt
temp/: classifiers_snakefile.smk
temp/snakemake_modules/: extra_taxonomy_classifiers.smk  metadecoder.smk  semibin.smk  taxonomy_classifiers.smk  vamb_default.smk
