[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taxvamb_benchmark"
version = "0.0.1"
description = ""

readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.workspace]
members = ["transfer", "utils", "util"]

[project.scripts]
taxvamb_benchmark = "workflow_PlasMAAG.__main__:main"
